mm7d (0.3) unstable; urgency=low

  * New help page.
  * Added system log page.
  * Added operation mode set pages.
  * Added LED status pages.
  * New test page in testpage directory.

 -- Pozsar Zsolt <pozsar.zsolt@szerafingomba.hu>  Sat, 13 Mar 2021 07:18:13

mm7d (0.2.1) unstable; urgency=low

  * Speeding up "server.on" functions

 -- Pozsar Zsolt <pozsar.zsolt@szerafingomba.hu>  Sat, 27 Feb 2021 21:19:32

mm7d (0.2) unstable; urgency=low

  * Added a new combined "set and get" function.
  * Detailed messages on console.
  * Periodic measure and switch status LEDs

 -- Pozsar Zsolt <pozsar.zsolt@szerafingomba.hu>  Sat, 09 Feb 2021 15:31:38

mm7d (0.1) unstable; urgency=low

  * Initial Release.

 -- Pozsar Zsolt <pozsar.zsolt@szerafingomba.hu>  Tue, 25 Aug 2020 18:25:00