@@ -13,8 +13,8 @@ Requirements:
 
   Hardware: ESP8266 Huzzah Breakout microcontroller
   Software: Adafruit Unified Sensor library v1.1.4 by Adafruit Industries
-            DHT sensor library v1.3.10 by Adafruit Industries
             Arduino String Splitter Library v1.0.0 by Harsha Alva
+            DHT sensor library v1.3.10 by Adafruit Industries
 
 2. How to get installer package?
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
