@@ -1,0 +1,8 @@
+@echo off
+rem MM7D v0.3 * Air quality measuring device
+rem  Copyright (C) 2020-2021 Pozsár Zsolt pozsar.zsolt@szerafingomba.hu
+rem clone.bat
+rem Clone libraries from Github
+git clone https://github.com/adafruit/Adafruit_Sensor.git
+git clone https://github.com/adafruit/DHT-sensor-library.git
+git clone https://github.com/aharshac/StringSplitter.git
